--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -17,6 +17,24 @@
     <!-- Custom CSS -->
     <link th:href="@{/css/styles.css}" rel="stylesheet">
     
+    <!-- Bootstrap JS Bundle -->
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/jquery.min.js}"></script> 
+    <!-- Html5-QRCode (Local) -->
+    <script th:src="@{/js/html5-qrcode.min.js}"></script>
+    
+    <!-- Select2 (Local) -->
+    <link th:href="@{/css/select2.min.css}" rel="stylesheet" />
+    <link th:href="@{/css/select2-bootstrap-5-theme.min.css}" rel="stylesheet" />
+    <script th:src="@{/js/select2.min.js}"></script>
+    <style>
+        .select2-container .select2-selection--single { height: 38px; }
+        .select2-container--bootstrap-5 .select2-selection { border-color: #dee2e6; }
+    </style>
+
+    <!-- Custom JS -->
+    <script th:src="@{/js/scripts.js}"></script>
+
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
@@ -37,6 +55,7 @@
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/products}">Products</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/batches}">Batches</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/sales}">Sales</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" th:href="@{/invoices}">Invoices</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/returns}">Returns</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/collections}">Collections</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/admin/settings}">Settings</a></li>
@@ -83,13 +102,18 @@
         </a>
     </div>
 
-    <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> <!-- Optional but often needed -->
-    <!-- Html5-QRCode (CDN) -->
-    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
-    <!-- Custom JS -->
-    <script th:src="@{/js/scripts.js}"></script>
+    <!-- Scripts moved to head -->
+    
+    <script>
+        $(document).ready(function() {
+            $('select.searchable').select2({
+                theme: 'bootstrap-5',
+                width: '100%',
+                placeholder: 'Select option...',
+                allowClear: true
+            });
+        });
+    </script>
     
     <th:block layout:fragment="scripts"></th:block>
 </body>
